Added Google Maps with Markers

--- a/interests.html
+++ b/interests.html
@@ -196,7 +196,7 @@
         </div>
 
     </footer>
-    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+    <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB79ESJIqovkjMhmR82AMWZrWcUXyCTnME&callback=initMap"></script>
     <script src="assets/js/maps.js"></script>
 </body>
